static/css/style.css
/* ... */
@media only screen and (min-width: 1200px) {
  /* global styles/base template components */

  h3 {
    font-size: 2.4rem;
  }

  h4 {
    font-size: 1.8rem;
  }

  #navbar-nav-list .nav-item > .nav-link {
    font-size: 1rem;
    padding-top: 6px;
    padding-bottom: 6px;
  }

  .navbar-brand {
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;
  }

  .main-container {
    min-height: calc(100vh - 60px);
  }

  .reviews-card.form-card {
    min-height: calc(100vh - 126px);
  }

  /* spacing/utility classes */

  .pull-content-up {
    top: -106px;
  }

  .push-down {
    top: 106px;
  }

  /* Flash message container */

  .flash-message-container > .alert {
    border: none;
  }

  /* Home (landing) page */

  .jumbotron {
    top: 0;
    margin-bottom: unset;
    position: relative;
    padding: unset;
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-width: 45vw;
    min-height: 25vw;
    max-height: 320px;
    max-width: 580px;
  }

  h2.h1-responsive {
    font-size: 2.6rem;
  }

  .jumbotron hr,
  .jumbotron hr + p {
    max-width: 450px;
  }

  .jumbotron .btn {
    max-width: 250px;
  }

  /* Login page */

  .form-card.login-form-card {
    top: 0;
    right: 1px;
    min-width: 45vw;
    max-width: 580px;
  }

  #form-login {
    min-width: 45vw;
    min-height: 32vw;
    max-height: 410px;
    max-width: 580px;
  }

  #form-login > h3,
  #form-login > .form-group,
  #form-login > .form-group + div,
  #form-login > .not-a-member,
  #form-login > button {
    max-width: 340px;
  }

  /* Registration page */

  #form-registration {
    min-height: 34vw;
    max-height: 460px;
  }
  #form-registration hr,
  #form-registration .already-a-member {
    width: 100%;
  }

  #form-registration > .pre-register {
    max-width: unset;
    font-size: 0.85rem;
  }

  #register-btn-column {
    top: -2px;
  }

  /* Review Submit page */

  /* Review Update page */

  #review-update-form-comments {
    max-height: 6rem;
  }

  /* Reviews page */

  .btn-more-info,
  .btn-group-vertical {
    width: 94%;
    margin-left: 3%;
    margin-right: 3%;
  }

  /* Barbers page */

  .nav-tabs .nav-link {
    font-size: 1rem;
  }

  /* Logout page */

  .logout-alert,
  .logout-alert.push-down,
  .thank-you-alert {
    top: 0;
    position: relative;
    min-width: 40vw;
    min-height: 23vw;
    max-height: 310px;
    max-width: 520px;
  }

  .logout-alert p,
  .thank-you-alert p {
    font-size: 1.1rem;
  }

  .logout-alert i,
  .thank-you-alert i {
    font-size: 1.7rem;
  }

  .logout-alert .btn {
    max-width: 250px;
  }

  /* Contact page */

  #form-contact > h3,
  #form-contact > .form-group,
  #form-contact > button {
    max-width: 340px;
  }

  /* Error Handlers */

  .error-alert {
    top: -0;
    max-width: 520px;
  }
}

